force-app/main/default/objects/LOTO_Record__c/LOTO_Record__c.object-meta.xml
<CustomObject>
    <description>Tracks each chemical application event for a Work Order, including EPA registration data, target pest, dose, applicator license, photo evidence, and dual sign-off (applicator + verifier) per Restricted-Use Pesticide (RUP) attestation policy. Drives the Chemical Application Log step of the masseyFlow orchestrator. (API name LOTO_Record__c is preserved from the inherited domain-neutral architecture per SOLUTION_DESIGN Path A; user-facing label is "Chemical Application Log".)</description>
    <label>Chemical Application Log</label>
    <nameField>
        <displayFormat>CAL-{0000}</displayFormat>
        <label>Application Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chemical Application Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>