force-app/main/default/objects/LOTO_Record__c/fields/Applicator_License__c.field-meta.xml
<CustomField>
    <fullName>Applicator_License__c</fullName>
    <label>Applicator License #</label>
    <length>40</length>
    <type>Text</type>
</CustomField>