force-app/main/default/objects/LOTO_Record__c/fields/Chemical_Name__c.field-meta.xml
<CustomField>
    <fullName>Chemical_Name__c</fullName>
    <label>Chemical Trade Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>