force-app/main/default/objects/LOTO_Record__c/fields/Dose_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dose_Amount__c</fullName>
    <label>Dose Amount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>