force-app/main/default/objects/LOTO_Record__c/fields/Dose_Unit__c.field-meta.xml
<CustomField>
    <fullName>Dose_Unit__c</fullName>
    <label>Dose Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>oz</fullName>
                <label>oz (ounces, weight)</label>
            </value>
            <value>
                <fullName>fl_oz</fullName>
                <label>fl oz (fluid ounces)</label>
            </value>
            <value>
                <fullName>gal</fullName>
                <label>gal (gallons)</label>
            </value>
            <value>
                <fullName>lb</fullName>
                <label>lb (pounds)</label>
            </value>
            <value>
                <fullName>gram</fullName>
                <label>g (grams)</label>
            </value>
            <value>
                <fullName>ml</fullName>
                <label>mL (milliliters)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>