force-app/main/default/objects/LOTO_Record__c/fields/Energy_Source__c.field-meta.xml
<CustomField>
    <fullName>Energy_Source__c</fullName>
    <label>Chemical Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC Mains</fullName>
            </value>
            <value>
                <fullName>DC Plant</fullName>
                <label>DC Plant (-48V)</label>
            </value>
            <value>
                <fullName>Backup Battery</fullName>
                <label>Backup Battery String</label>
            </value>
            <value>
                <fullName>Optical Source</fullName>
                <label>Optical Source (Laser)</label>
            </value>
            <value>
                <fullName>RF Source</fullName>
            </value>
            <value>
                <fullName>Aerial Bond</fullName>
                <label>Aerial Bond / Strand</label>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>