force-app/main/default/objects/LOTO_Record__c/fields/EPA_Reg_Number__c.field-meta.xml
<CustomField>
    <fullName>EPA_Reg_Number__c</fullName>
    <label>EPA Registration Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>