force-app/main/default/objects/LOTO_Record__c/fields/Isolated_At__c.field-meta.xml
<CustomField>
    <fullName>Isolated_At__c</fullName>
    <label>Application Started At</label>
    <type>DateTime</type>
</CustomField>