force-app/main/default/objects/LOTO_Record__c/fields/Isolated_By__c.field-meta.xml
<CustomField>
    <fullName>Isolated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applied By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Chemical Application Logs (Applied By)</relationshipLabel>
    <relationshipName>LOTO_Records_Isolated</relationshipName>
    <type>Lookup</type>
</CustomField>