force-app/main/default/objects/LOTO_Record__c/fields/Isolation_Point__c.field-meta.xml
<CustomField>
    <fullName>Isolation_Point__c</fullName>
    <label>Application Area / Point</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>