force-app/main/default/objects/LOTO_Record__c/fields/Lock_Tag_Number__c.field-meta.xml
<CustomField>
    <fullName>Lock_Tag_Number__c</fullName>
    <label>Re-Entry Posting #</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>