force-app/main/default/objects/LOTO_Record__c/fields/Photo_ContentVersion_Id__c.field-meta.xml
<CustomField>
    <fullName>Photo_ContentVersion_Id__c</fullName>
    <label>Application Photo Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>