force-app/main/default/objects/LOTO_Record__c/fields/Removed_At__c.field-meta.xml
<CustomField>
    <fullName>Removed_At__c</fullName>
    <label>Re-Entry Cleared At</label>
    <type>DateTime</type>
</CustomField>