force-app/main/default/objects/LOTO_Record__c/fields/Removed_By__c.field-meta.xml
<CustomField>
    <fullName>Removed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Re-Entry Cleared By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Chemical Application Logs (Re-Entry Cleared By)</relationshipLabel>
    <relationshipName>LOTO_Records_Removed</relationshipName>
    <type>Lookup</type>
</CustomField>