force-app/main/default/objects/LOTO_Record__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pre-Application</label>
            </value>
            <value>
                <fullName>Isolated</fullName>
                <label>Applied</label>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
                <label>Re-Entry Cleared</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>