force-app/main/default/objects/LOTO_Record__c/fields/Target_Pest__c.field-meta.xml
<CustomField>
    <fullName>Target_Pest__c</fullName>
    <label>Target Pest / Species</label>
    <length>120</length>
    <type>Text</type>
</CustomField>