force-app/main/default/objects/LOTO_Record__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Chemical Application Logs (Verified By)</relationshipLabel>
    <relationshipName>LOTO_Records_Verified</relationshipName>
    <type>Lookup</type>
</CustomField>